pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/resource-body.ub
factory: {
  resources: {
    hello: std.fs-file {
      path: '/tmp/one'
      path: '/tmp/two'
    }
  }
}
